# ideal-guide

./: .dockerignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/app/: main.py
